# logbuch-claude

./: CLAUDE.md  Cargo.toml  README.md  TODO.md
.githooks/: pre-commit
.github/workflows/: auto-release-pr.yml  bump-and-tag.yml  ci.yml  release.yml
scripts/: bump-version.sh
src/: app.rs  config.rs  event.rs  lib.rs  main.rs  output.rs  summary.rs  wizard.rs
src/cmd/: log.rs  mod.rs  sessions.rs  tasks.rs  todos.rs
src/db/: migrations.rs  mod.rs  queries.rs
src/model/: mod.rs  session.rs  task.rs  todo.rs
src/ui/: archive.rs  board.rs  input.rs  keybindings.rs  mod.rs  session_view.rs  task_detail.rs
tests/: config_tests.rs  db_tests.rs  model_tests.rs  summary_tests.rs
