[package]
name = "logbuch"
version = "0.1.0"
edition = "2021"
description = "A keyboard-driven TUI task-management and productivity app with pomodoro sessions"
license = "GPL-3.0-only"
rust-version = "1.75.0"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
notify-rust = "4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
